day end 22-7-23 video 268 oauth2ResourceServer() jwt() cors() error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.data.rest.base-path=/api
 allowed.origins=http://localhost:4200/
 
 spring.data.rest.detection-strategy=annotated
+
+okta.oauth2.client-id=0oaa0hoptwONtw3bN5d7
+okta.oauth2.issuer=http://dev-74854092.okta.com/oauth2/default
