day end 27-7-23 video 268

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ allowed.origins=http://localhost:4200/
 
 spring.data.rest.detection-strategy=annotated
 
-okta.oauth2.client-id=0oaa0hoptwONtw3bN5d7
-okta.oauth2.issuer=http://dev-74854092.okta.com/oauth2/default
+okta.oauth2.client-id=0oa9z26bluhEwhl9C5d7
+okta.oauth2.issuer=https://dev-99761550.okta.com/oauth2/default
